correctedComments_25.02.25